--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"cross-env NODE-ENV=production node src/index.js",
+    "dev": "cross-env NODE-ENV=development nodemon src/index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-env": "^0.1.6",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
   },
