--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"cross-env NODE-ENV=production node src/index.js",
-    "dev": "cross-env NODE-ENV=development nodemon src/index.js",
+    "start":"cross-env NODE_ENV=production node src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "test": "jest"
   },
   "author": "",
@@ -14,7 +14,6 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-env": "^0.1.6",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
   },
